Added constructs and mechanisms to decrypt encrypted health information
